--- a/guli_parent/service/pom.xml
+++ b/guli_parent/service/pom.xml
@@ -10,9 +10,11 @@
     <artifactId>service</artifactId>
     <packaging>pom</packaging>
 
-
     <name>service</name>
-    <url>http://maven.apache.org</url>
+    <modules>
+        <module>service_oss</module>
+        <module>service_edu</module>
+    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -50,6 +52,12 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+
+        <!-- 代码生成器 -->
+        <dependency>
+        <groupId>com.baomidou</groupId>
+        <artifactId>mybatis-plus-generator</artifactId>
         </dependency>
 
         <!--mysql-->
@@ -118,6 +126,25 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>com.fasterxml.jackson.module</groupId>-->
+<!--            <artifactId>jackson-module-kotlin</artifactId>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+
 <!--        在模块service模块中引入service-base-->
         <dependency>
             <groupId>com.atguigu</groupId>
@@ -131,5 +158,6 @@
             <artifactId>common_utils</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
     </dependencies>
 </project>
