--- a/guli_parent/service/service_edu/pom.xml
+++ b/guli_parent/service/service_edu/pom.xml
@@ -11,7 +11,6 @@
     <packaging>jar</packaging>
 
     <name>service_edu</name>
-    <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -29,5 +28,11 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.12</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
